index.css
html {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    height: 100%;
    width: 100%;
  }
  
*, *:before, *:after {
    box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Inter', sans-serif;
    height: 100%;
    width: 100%;
    background-color: rgb(14, 14, 14);
}

/* Header Section */

header {
    height: 15rem;
    width: 100%;
}

.header-img {
    height: 15rem;
    width: 100%;
    object-fit: cover;
    opacity: 40%;
}

.title {
    position: absolute;
    top: 3rem;
    left: 4rem;
    color: white;
    font-size: 3.5rem;
    letter-spacing: -2px;
}

.my-watchlist-text {
    position: absolute;
    top: 5.5rem;
    right: 5rem;
    font-size: 1.5rem;
    color: white;
    text-decoration: none;
}


/* Search bar */

.search-container {
    display: flex;
    justify-content: center;
    width: 100vw;
    position: relative;
    top: -20px;
}

.movie-name-input {
    background-color: #2E2E2F;
    height: 3rem;
    padding: 0;
    border: none;
    color: #A5A5A5;
    text-indent: 3rem;
    width: 50vw;
    border-radius: 5px 0 0 5px;
    font-size: 1.2rem;
}

.search-btn {
    height: 3rem;
    border: none;
    padding: 0;
    background-color: #4B4B4B;
    color: white;
    width: 10vw;
    border-radius: 0 5px 5px 0;
    font-size: 1rem;
}

.search-icon {
    position: absolute;
    left: 21%;
    top: 1rem;
    color: #A5A5A5;
}

/* Film section without movies */

.movie-container {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    color: #2E2E2F;
}

.film-icon {
    font-size: 6rem;
    margin: 20rem 0 1rem 0;
}

.film-section-text {
    font-size: 1.5rem;
    margin: 0;
    font-weight: 700;
}


/* Film section with movies */

.movie {
    margin: 1rem 5rem 0rem 5rem;
    color: white;
    display: flex;
    align-items: center;
    gap: 2rem;
    padding-bottom: 1.5rem;
    border-bottom: 1px solid #2C2C2C;
}

.movie-poster {
    height: 15rem
}

.movie-title-container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.movie-title {
    font-weight: 400;
    margin: 0;
}

.star-icon {
    margin-left: 1rem;
    color: #FEC654;
    font-size: 0.9rem;
}

.movie-rating {
    margin: 0 0 0 0.2rem;
}

.movie-middle-section, .movie-runtime-container, .add-to-watchlist-container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.movie-runtime {
    margin: 0;
}

.movie-genre {
    margin: 0 0 0 2rem;
}

.plus-icon {
    margin-left: 2rem;
    background-color: white;
    color: black;
    padding: 0.2rem;
    border-radius: 50%;
    cursor: pointer;
}

.add-to-watchlist-text {
    margin-left: 0.3rem;
    cursor: pointer;
}

.movie-description {
    color: #A5A5A5;
}

.movie-runtime, .movie-genre, .plus-icon, .add-to-watchlist-text {
    font-size: 0.9rem;
}


/* Media Queries for Phone */
@media screen and (max-width: 550px) {
    header {
        height: 10rem;
    }
    
    .header-img {
        height: 10rem;
    }
    
    .title {
        position: absolute;
        top: 2.7rem;
        left: 1.5rem;
        font-size: 1.8rem;
    }
    
    .my-watchlist-text {
        position: absolute;
        top: 3.5rem;
        right: 2rem;
        font-size: 1rem;
    }
    
    
    /* Search bar */
    
    .movie-name-input {
        width: 65vw;
    }
    
    .search-btn {
        width: 20vw;
    }
    
    .search-icon {
        left: 13%;
    }

    .film-icon {
        margin: 12rem 0 1rem 0;
    }

    /* Film section with movies */

    .movie {
        margin: 1rem 1.5rem 0rem 1.5rem;
    }

    .movie-poster {
        height: 12rem
    }

    .movie-title {
        font-size: 1rem;
    }

    .star-icon {
        font-size: 0.7rem;
    }

    .movie-rating {
        font-size: 0.9rem;
    }

    .movie-middle-section {
        align-items: flex-start;
        flex-direction: column;
    }

    .movie-middle-section {
        margin-top: 0.5rem;
    }

    .movie-genre {
        margin-left: 0.8rem;
    }

    .plus-icon {
        margin-left: 0;
    }

    .movie-runtime, .movie-genre, .plus-icon, .add-to-watchlist-text {
        font-size: 0.7rem;
    }

    .movie-description {
        font-size: 0.7rem;
    }
}

/* Media Queries for Tablet */

@media screen and (min-width: 551px) and (max-width: 1024px) {
    header {
        height: 12rem;
    }
    
    .header-img {
        height: 12rem;
    }
    
    .title {
        position: absolute;
        top: 2.7rem;
        left: 5rem;
        font-size: 2.5rem;
    }
    
    .my-watchlist-text {
        position: absolute;
        top: 4.3rem;
        right: 5rem;
        font-size: 1.2rem;
    }
    
    
    /* Search bar */
    
    .movie-name-input {
        width: 65vw;
        text-indent: 3.5rem;
    }
    
    .search-btn {
        width: 15vw;
    }
    
    .search-icon {
        left: 13%;
    }
}

